<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.82"
        android:orientation="vertical"
        tools:ignore="UselessLeaf" />

    <ImageButton
        android:id="@+id/imageButton_open"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="0.32"
        android:background="@drawable/imgbutton_selector"
        android:scaleType="fitCenter"
        android:src="@drawable/lock"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:ems="10"
        android:hint="@string/password"
        android:padding="5dp"
        android:textSize="18sp"
        android:background="@drawable/edit_selector"
        android:autofillHints="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.06">

        <Button
            android:id="@+id/button_scan"
            android:layout_weight="1"
            android:background="@drawable/mainactivitybutton_selector"
            style="@style/main_button_style"
            android:text="@string/connect"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/button_send"
            android:layout_weight="1"
            android:background="@drawable/mainactivitybutton_selector"
            style="@style/main_button_style"
            android:text="@string/input" />


        <Button
            android:id="@+id/button_more"
            android:layout_weight="1"
            android:background="@drawable/mainactivitybutton_selector"
            style="@style/main_button_style"
            android:text="@string/more" />
    </LinearLayout>

</LinearLayout>